# 2025

./: README.md  organised_video_1.ipynb  tinygrad.ipynb  video_1.ipynb
.ipynb_checkpoints/: video_1-checkpoint.ipynb
day-one-aoc-2025/day_1/: day_1.md  part_1.py  part_2.py  pyproject.toml
day_1/: README.md
nn/: pyproject.toml
nn/.ipynb_checkpoints/: test_with_juv-checkpoint.ipynb
