[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ruff>=0.12.1",
    "tinygrad>=0.10.3",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
